# Tello-object-detection

./: README.md  config.yaml  requirements.txt  single_object_detection1.py
object_detection/: camera_filter_class.py  filter_class.py  single_object_detection1.py
person_tracking/all_bounding_boxes_msg/: CMakeLists.txt  package.xml
person_tracking/all_bounding_boxes_msg/msg/: AllBoundingBoxes.msg  Box.msg  PointMsg.msg
person_tracking/person_tracked/: CMakeLists.txt  package.xml
person_tracking/person_tracking/: package.xml  setup.py
person_tracking_package/BT/: is_tracking_mode_correct.py  person_tracking_bt.py  rotate_tello.py
person_tracking_package/drawer_plugin/: package.xml  setup.cfg  setup.py
person_tracking_package/drawer_plugin/drawer_plugin/: drawing_target.py
person_tracking_package/launch/: system_launch.py
person_tracking_package/object_detection_plugin/: package.xml  setup.cfg  setup.py
person_tracking_package/object_following_plugin/: package.xml  setup.cfg  setup.py
person_tracking_package/person_object_association/: package.xml  setup.cfg  setup.py
person_tracking_package/person_tracking/: architecture project.xcf  package.xml  setup.cfg  setup.py
person_tracking_package/person_tracking_bringup/: package.xml  setup.cfg  setup.py
person_tracking_package/person_tracking_for_llm/: package.xml  setup.cfg  setup.py
person_tracking_package/person_tracking_for_llm/config/: params.yaml
person_tracking_package/person_tracking_for_llm/launch/: person_tracking_llm_launch.py
person_tracking_package/person_tracking_for_llm/person_tracking_for_llm/: detect_all.py  drawing_target_person.py  helpers.py  landmarks_filter.py  mpc.py  pid.py  publish_test.py  tello_sign_interpreter.py  track_person.py  tracking_trigger.py
person_tracking_package/person_tracking_helpers/: package.xml  setup.cfg  setup.py
person_tracking_package/person_tracking_msgs/: CMakeLists.txt  package.xml
person_tracking_package/sign_filter_plugin/: package.xml  setup.cfg  setup.py
person_tracking_package/video_interface_plugin/: package.xml  setup.cfg  setup.py
ros_workspace/: README.md
ros_workspace/tello/: setup.cfg  setup.py
tello_package/: package.xml
tello_package/tello/: camera_publisher.py  sub1.py
(+41 files in other folders)
