<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>person_tracking_for_llm</name>
  <version>0.0.0</version>
  <description>This package is a tello drone person tracker that must be coupled with a LLM drone command sending package to run</description>
  <maintainer email="maevachekma@gmail.com">Ingrid Maeva Chekam</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>person_tracked</exec_depend>
  <exec_depend>person_tracking_msgs</exec_depend>
  <exec_depend>ros2launch</exec_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
